<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TestResultFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:textSize="36sp"
            android:text="@string/test_complete_congrats" />

        <TextView
            android:id="@+id/test_complete_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="24sp"
            android:text="@string/test_complete_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/test_complete_yourres" />

        <TextView
            android:id="@+id/test_complete_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_complete_points" />

        <TextView
            android:id="@+id/test_complete_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/test_complete_questions" />

        <TextView
            android:id="@+id/test_complete_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/test_complete_mark" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/postCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/result_post_button"
                android:alpha="0.45" />

            <Button
                android:id="@+id/okButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:text="@string/ok_string" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
